--- a/info_page/info.html
+++ b/info_page/info.html
@@ -95,7 +95,7 @@
                     <li><strong><code>MoistureTracks.py</code></strong>: Analyzes and plots trajectories of particles that release moisture over the target area. Generates cumulative and hourly trajectory plots, aggregate moisture contribution maps, time evolution plots, and gridded moisture release data.</li>
                 </ul>
                 <div class="placeholder">
-                    <img src="diagram/Analysis_Workflow.png" alt="Overall Code Structure and Data Flow Diagram" style="width:100%; height:auto; max-width:1200px; display:block; margin-left:auto; margin-right:auto;">
+                    <img src="diagram/Analysis_Workflow.PNG" alt="Overall Code Structure and Data Flow Diagram" style="width:100%; height:auto; max-width:1200px; display:block; margin-left:auto; margin-right:auto;">
                     Figure 1: Overall Code Structure and Data Flow Diagram - Post-Processing Analysis Workflow.
                 </div>
             </section>
@@ -190,7 +190,7 @@
                 <h2>4. Main Workflow (<code>main_analysis_workflow.py</code>)</h2>
                 <p>The main script orchestrates the entire post-processing pipeline. The typical flow is as follows:</p>
                 <div class="placeholder">
-                    <img src="diagram/Main_Workflow_Flowchart.png" alt="Flowchart of main_analysis_workflow.py" style="width:100%; height:auto; max-width:1000px; display:block; margin-left:auto; margin-right:auto;">
+                    <img src="diagram/Main_Workflow_Flowchart.PNG" alt="Flowchart of main_analysis_workflow.py" style="width:100%; height:auto; max-width:1000px; display:block; margin-left:auto; margin-right:auto;">
                     Figure 2: Flowchart of <code>main_analysis_workflow.py</code> - Main Analysis Workflow Stages.
                 </div>
 
@@ -366,7 +366,7 @@
                     <li><strong>Output</strong>: Individual CSV files per particle in <span class="config-param">ANALYZED_PARTICLE_HISTORIES_DIR</span>, containing all original and newly computed columns.</li>
                 </ul>
                  <div class="placeholder">
-                    <img src="diagram/History_Analysis.png" alt="Flowchart of Detailed History Analysis per particle" style="width:100%; height:auto; max-width:800px; display:block; margin-left:auto; margin-right:auto;">
+                    <img src="diagram/History_Analysis.PNG" alt="Flowchart of Detailed History Analysis per particle" style="width:100%; height:auto; max-width:800px; display:block; margin-left:auto; margin-right:auto;">
                     Figure 3: Flowchart of Detailed History Analysis per particle (&Delta;q, &Delta;T calculation) - Single Particle History Analysis Workflow.
                 </div>
 
@@ -784,7 +784,7 @@
                     <li><strong>Output</strong>: GIF and MP4 animation files, and static colorbar PNGs, saved in <code>PLOTS_OUTPUT_DIR/animations_output/</code>.</li>
                 </ul>
                 <div class="placeholder">
-                    <img src="diagram/Animation_Generation.png" alt="Flowchart of Animation Generation Process" style="width:100%; height:auto; max-width:1000px; display:block; margin-left:auto; margin-right:auto;">
+                    <img src="diagram/Animation_Generation.PNG" alt="Flowchart of Animation Generation Process" style="width:100%; height:auto; max-width:1000px; display:block; margin-left:auto; margin-right:auto;">
                     Figure 16: Flowchart of Animation Generation Process - Animation Generation Workflow.
                 </div>
                 <div class="placeholder">
